tests/golden/type_errors/struct_constructor_unknown_type.cd
let p = Person { name: "Ada" };
